--- a/Laboratorio_2/Parte_2/Lab_2_Sumador.qsf
+++ b/Laboratorio_2/Parte_2/Lab_2_Sumador.qsf
@@ -45,9 +45,9 @@ set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:17:21  FEBRUARY 27, 2
 set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name BOARD "DE1-SoC Board"
-set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (Verilog)"
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim (VHDL)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
@@ -55,7 +55,6 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name VHDL_FILE bit4_sumador.vhd
 set_global_assignment -name VHDL_FILE medio_sumador.vhd
 set_global_assignment -name VHDL_FILE completo_sumador.vhd
-set_global_assignment -name VHDL_FILE medio_sumador_tb.vhd
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
@@ -63,4 +62,11 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE bit4_sumador_tb.vhd
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH bit4_sumador_tb -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME bit4_sumador_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id bit4_sumador_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME bit4_sumador_tb -section_id bit4_sumador_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE bit4_sumador_tb.vhd -section_id bit4_sumador_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
