--- a/Laboratorio_2/Parte_2/Lab_2_Sumador.qsf
+++ b/Laboratorio_2/Parte_2/Lab_2_Sumador.qsf
@@ -69,4 +69,18 @@ set_global_assignment -name EDA_TEST_BENCH_NAME bit4_sumador_tb -section_id eda_
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id bit4_sumador_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME bit4_sumador_tb -section_id bit4_sumador_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE bit4_sumador_tb.vhd -section_id bit4_sumador_tb
+set_location_assignment PIN_AE12 -to A[3]
+set_location_assignment PIN_AD10 -to A[2]
+set_location_assignment PIN_AC9 -to A[1]
+set_location_assignment PIN_AE11 -to A[0]
+set_location_assignment PIN_AD12 -to B[3]
+set_location_assignment PIN_AD11 -to B[2]
+set_location_assignment PIN_AF10 -to B[1]
+set_location_assignment PIN_AF9 -to B[0]
+set_location_assignment PIN_AB12 -to CIN
+set_location_assignment PIN_Y21 -to SUM[3]
+set_location_assignment PIN_W21 -to SUM[2]
+set_location_assignment PIN_W20 -to SUM[1]
+set_location_assignment PIN_Y19 -to SUM[0]
+set_location_assignment PIN_V16 -to COUT
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
