--- a/Laboratorio_3/Problema_1/or_xor_sum/ALU.qsf
+++ b/Laboratorio_3/Problema_1/or_xor_sum/ALU.qsf
@@ -112,3 +112,4 @@ set_global_assignment -name EDA_TEST_BENCH_FILE tb_mod_alu.sv -section_id tb_mod
 set_global_assignment -name SYSTEMVERILOG_FILE mod_compl.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mod_compare.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE mod_lshift_a.sv
