--- a/Laboratorio_4/movimientos/movimiento_matriz.qsf
+++ b/Laboratorio_4/movimientos/movimiento_matriz.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY mov_derecha
+set_global_assignment -name TOP_LEVEL_ENTITY mov_izquierda
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 22.1STD.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:16:01  APRIL 18, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.0 Lite Edition"
@@ -55,16 +55,22 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
 set_global_assignment -name SYSTEMVERILOG_FILE mov_derecha.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name SYSTEMVERILOG_FILE mov_derecha_tb.sv
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH mov_derecha_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH mov_izquierda_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME mov_derecha_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id mov_derecha_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME mov_derecha_tb -section_id mov_derecha_tb
+set_global_assignment -name SYSTEMVERILOG_FILE mov_izquierda.sv
+set_global_assignment -name SYSTEMVERILOG_FILE mov_izquierda_tb.sv
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE mov_derecha_tb.sv -section_id mov_derecha_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME mov_izquierda_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id mov_izquierda_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME mov_izquierda_tb -section_id mov_izquierda_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE mov_izquierda_tb.sv -section_id mov_izquierda_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
