--- a/Laboratorio_4/2048.qsf
+++ b/Laboratorio_4/2048.qsf
@@ -70,4 +70,14 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_fsm
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_fsm -section_id tb_fsm
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_fsm.sv -section_id tb_fsm
 set_global_assignment -name SYSTEMVERILOG_FILE clock2.sv
+set_location_assignment PIN_AA14 -to btn_izquierda
+set_location_assignment PIN_AA15 -to btn_derecha
+set_location_assignment PIN_W15 -to btn_arriba
+set_location_assignment PIN_Y16 -to btn_abajo
+set_location_assignment PIN_AF9 -to clk
+set_location_assignment PIN_AC12 -to flag
+set_location_assignment PIN_AB12 -to rst
+set_location_assignment PIN_V16 -to movement[0]
+set_location_assignment PIN_W16 -to movement[1]
+set_location_assignment PIN_V17 -to movement[2]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
