--- a/Laboratorio_4/vga_decoding.qsf
+++ b/Laboratorio_4/vga_decoding.qsf
@@ -98,14 +98,12 @@ set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME vga_decoder_tb -section_i
 set_global_assignment -name EDA_TEST_BENCH_FILE vga_decoder_tb.sv -section_id vga_decoder_tb
 set_location_assignment PIN_F10 -to nblanc
 set_location_assignment PIN_C10 -to nsync
-set_global_assignment -name VHDL_FILE wrapper.vhd
-set_global_assignment -name VHDL_FILE Pixel_On_Text2.vhd
-set_global_assignment -name VHDL_FILE Pixel_On_Text.vhd
-set_global_assignment -name VHDL_FILE Font_Rom.vhd
-set_global_assignment -name VHDL_FILE commonPak.vhd
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE Pixel_On_Text2.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Font_Rom.sv
 set_global_assignment -name SYSTEMVERILOG_FILE vga_sync.sv
 set_global_assignment -name SYSTEMVERILOG_FILE vga_decoder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE color_module.sv
 set_global_assignment -name SYSTEMVERILOG_FILE vga_decoder_tb.sv
 set_global_assignment -name SYSTEMVERILOG_FILE color_selector.sv
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE chargenrom.sv
